# paper-organize

./: .gitignore  .pre-commit-config.yaml  .safety-project.ini  ACKNOWLEDGMENTS.md  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  LICENSE  NOTICE  README.md  pyproject.toml
.beads/: metadata.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
LICENSES/: Apache-2.0.txt  BSD-3-Clause.txt
docs/: AGPL-CLEANUP-COMPLETE.md  COMPLIANCE-REPORT.md  FINAL-COMPLIANCE-REPORT.md  LICENSE-AUDIT.md  TESTING_STRATEGY.md  architecture-decisions.md  ci-integration-test-analysis.md  development.md  github-release-notes-v1.0.0.md  paper-dl-roadmap.md  paper-dl-specification.md  paper-organize-roadmap.md  pdf2doi-replacement-architecture.md  postscript-support-assessment.md  project-structure.md  session-handoff.md  test-specialist-ci-analysis.md  v1.0.0-release-summary.md
src/paperdl/: __init__.py  cli.py  download.py  exceptions.py  metadata.py  storage.py
src/paperorganize/: __init__.py  cli.py  download.py  input_detection.py  metadata.py  metadata_naming.py  models.py  processors.py
src/paperorganize/metadata_extraction/: __init__.py  api_clients.py  metadata_enricher.py  pattern_matchers.py  text_extractors.py
tests/: __init__.py  conftest.py  http_test_helpers.py  test_cli.py  test_download.py  test_input_detection.py  test_integration.py  test_metadata.py  test_metadata_extraction.py  test_processors.py  test_storage.py
